<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RootLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#CCCCCC"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/vocab_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#ffffffff">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#ffffffff"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/block_row1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:padding="3dp"
                            android:text="@string/vocab_word_textview"
                            android:textColor="@color/mainColor"/>

                        <EditText
                            android:id="@+id/vocab_word_edt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/vocab_word_hint"
                            android:inputType="text"
                            android:lines="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/block_row2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:padding="3dp"
                            android:text="@string/vocab_terminology_textview"
                            android:textColor="@color/mainColor" />

                        <EditText
                            android:id="@+id/vocab_terminology_edt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/vocab_terminology_hint"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/block_row3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:padding="3dp"
                            android:text="@string/vocab_transliterated_textview"
                            android:textColor="@color/mainColor"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/vocab_transliterated_edt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/vocab_transliterated_hint"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/block_row4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:padding="3dp"
                            android:text="@string/vocab_category_textview"
                            android:textColor="@color/mainColor" />

                        <Spinner
                            android:id="@+id/vocab_cate_spn"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vocab_button_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/vocab_save_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/button"
                            android:padding="10dp"
                            android:enabled="false"


                            android:text="@string/vocab_save_btn" />

                        <Button
                            android:id="@+id/vocab_clear_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/button"
                            android:padding="10dp"
                            android:text="@string/vocab_clear_btn" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/category_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#ffffffff">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/Block_r2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:padding="3dp"
                            android:text="@string/tv_cat"
                            android:textColor="@color/mainColor" />

                        <Spinner
                            android:id="@+id/categories_spn"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/Block_r1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:padding="3dp"
                            android:text="@string/category_name_textview"
                            android:textColor="@color/mainColor" />

                        <EditText
                            android:id="@+id/cat_name_edt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/category_name_hint"
                            android:inputType="text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/cat_save_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/button_save"
                            android:padding="10dp"
                            android:text="@string/category_submit_add_btn" />

                        <Button
                            android:id="@+id/cat_clear_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/button"
                            android:padding="10dp"
                            android:text="@string/category_clear_btn" />
                        <Button
                            android:id="@+id/cat_delete_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:background="@drawable/button"
                            android:padding="10dp"
                            android:text="@string/category_delete_btn" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>

